# aithena-services

./: .env-sample  .gitignore  AzureEnv.md  README.md  example1.ipynb  plotly_interactive_no_args.py  pyproject.toml
agents/chat/: Dockerfile  README.md  pyproject.toml  variables-sample.env
agents/chat/src/polus/aithena_agent_chat/: component_utils.py  dashboard.py  long.md  longq.md  notes.md  style.css
api/: api.py  chat_models.py  config_sample.json  dashboard.py  embed_models.py  funcs.py  main.py  models.py  sol_edit_llmlabel_fapi.py  utils.py
chatbot-dash/: README.md  pyproject.toml
chatbot-dash/src/chatbot_dash/: chatbot.py  config.py
chatbot-dash/src/chatbot_dash/components/: chat_options.py  editable_message.py  model_info.py
dashboard/: chatbot.py  component_utils.py  config.py  dash_v1.py  sol_edit_llmlabel.py  sol_edit_llmlabel_fapi.py
dashboard/components/: chat_options.py
docker/: Dockerfile  README.md  build-docker.sh  setup_ollama.py  variables_sample.env
docker/config/: config_sample.json
docs/: AzureEnv.md  api_config.md  env.md
examples/: azureopenai-llama-index.py  fapi.ipynb  ollama-llama-index.py
kubernetes/: aithena-services-depl.yaml  aithena-services-secret.sample.yaml  aithena-services-service.yaml  pv-claim-aithena-services.yaml  pv-volume-aithena-services.yaml
ollama/: docker.md
src/aithena_services/: __init__.py  envvars.py
src/aithena_services/common/: azure.py
src/aithena_services/embeddings/: __init__.py  azure_.py  azure_openai.py  ollama.py  ollama_.py
src/aithena_services/embeddings/ollama/: __init__.py  base.py
src/aithena_services/llms/: __init__.py  azure_openai.py  azure_openai_.py  ollama.py  ollama_.py  openai.py  openai_.py  utils.py
src/aithena_services/llms/types/: __init__.py  base.py  message.py  response.py
src/aithena_services/types/: __init__.py  message.py  model.py
src/aithena_services/types/models/: __init__.py  anthropic_.py  base.py  ollama_.py  openai_.py
tests/: conftest.py
tests/aithena_services/: __init__.py  test_azure_aithena.py  test_fapi.py  test_message.py  test_ollama_aithena.py
tests/llama_index/: __init__.py  test_azureopenai_integration.py  test_ollama_integration.py
tests/ollama/: __init__.py  test_ollama.py  test_ollama_chat.py  test_ollama_embed.py
