[tool.poetry]
name = "aithena-agent-chat"
version = "0.1.0-dev3"
description = "A generic chat agent to interact with chat models in the Aithena framework."
authors = ["Camilo Velez <camilov61@gmail.com>"]
readme = "README.md"
packages = [{include = "polus", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10"
solara = "^1.39.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
